Fix the alignment issue

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -490,6 +490,7 @@
 
 .h-6 {
   height: 1.5rem;
+  margin-top: 0px;
 }
 
 .h-8 {
