--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -556,7 +556,7 @@
   background-color: transparent;
   padding: 2px;
   transition: background-color 0.3s ease, color 0.3s ease;
-
+  padding: 10px 10px;
 }
 
 .border:hover,
